--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bulma": "^0.9.1",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -28,7 +30,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "node-sass": "^5.0.0",
     "prettier": "^1.19.1",
+    "sass-loader": "^10.0.5",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
   }
