--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/lodash.debounce": "^4.0.6",
+    "@types/marked": "^1.1.0",
     "axios": "^0.21.0",
     "bulma": "^0.9.1",
     "core-js": "^3.6.5",
     "flush-promises": "^1.0.2",
+    "highlight.js": "^10.3.2",
+    "lodash.debounce": "^4.0.8",
+    "marked": "^1.2.3",
     "moment": "^2.29.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-rc.2"
